Fix video iframes on mobile

--- a/source/_assets/stylesheets/components/forms.less
+++ b/source/_assets/stylesheets/components/forms.less
@@ -46,6 +46,7 @@ form {
     }
   }
   &.navbar-search {
+    margin-bottom: 30px;
     .input-btn {
       border: none;
       background: none;
